traefik/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - path: /rabbitmq/
        pathType: Prefix
        backend:
          service:
            name: import-definitions
            port:
              number: 15672
      - path: /ui
        pathType: Prefix
        backend:
          service:
            name: vaultraft
            port:
              number: 8200
